--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,8 @@
     <script src="./scripts/controllers/paste-json.js"></script>
     <script src="./scripts/controllers/errorpresenter.js"></script>
     <script src="./scripts/controllers/openexamples.js"></script>
+    <script src="./scripts/controllers/load-repo.js"></script>
+    <script src="./scripts/controllers/save-file-to-repo.js"></script>
     <script src="./scripts/controllers/modal.js"></script>
     <script src="./scripts/controllers/security.js"></script>
     <script src="./scripts/directives/on-file-change.js"></script>
@@ -107,6 +109,7 @@
     <script src="./scripts/services/storage.js"></script>
     <script src="./scripts/services/local-storage.js"></script>
     <script src="./scripts/services/backend.js"></script>
+    <script src="./scripts/services/gitrepo.js"></script>
     <script src="./scripts/services/keyword-map.js"></script>
     <script src="./scripts/services/preferences.js"></script>
     <script src="./scripts/services/auth-manager.js"></script>
