--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
     <script src="./scripts/controllers/openexamples.js"></script>
     <script src="./scripts/controllers/load-repo.js"></script>
     <script src="./scripts/controllers/save-file-to-repo.js"></script>
+    <script src="./scripts/controllers/commit-file-to-repo.js"></script>
     <script src="./scripts/controllers/modal.js"></script>
     <script src="./scripts/controllers/security.js"></script>
     <script src="./scripts/directives/on-file-change.js"></script>
